fixed z-index

--- a/my_style.css
+++ b/my_style.css
@@ -7,7 +7,7 @@
 .top-menu-w-background{
   position: fixed;
   color: #1a1b1f;
-  z-index: 5;
+  z-index: 2;
   width: 100%;
   height: 80px;
   padding-right: 24px;
@@ -22,7 +22,7 @@
 .top-menu_small{   
   position: fixed;
   color: #1a1b1f;
-  z-index: 5;
+  z-index: 2;
   width: 100%;
   height: 80px;
   padding-right: 19px;
@@ -35,7 +35,7 @@
 .top-menu{
   position: fixed;
   color: #1a1b1f;
-  z-index: 5;
+  z-index: 2;
   width: 100%;
   height: 136px;
   padding-right: 19px;
@@ -66,7 +66,7 @@
 #logo{
   max-width:40px; 
   height: auto; 
-  z-index: 5; 
+  z-index: 2; 
   float: left;
   margin-top: 3px;
 }
@@ -75,7 +75,7 @@
 .nav_buttons {
   opacity: 100%;
   float:right; 
-  z-index: 5;
+  z-index: 2;
 }
 
 .nav_buttons li{
@@ -119,7 +119,7 @@
 
 .menu {
   position: fixed;
-  z-index: 3;
+  z-index: 2;
   bottom:3%;
 }
 
@@ -127,7 +127,7 @@
 
 .menu_1 {
   position: fixed;
-  z-index: 3;
+  z-index: 2;
   text-align: center;
   bottom:3%;
   background-image:linear-gradient(to top, rgba(255,255,255,200), rgba(0,0,0,0));
@@ -307,13 +307,6 @@ li {
  }
 
 
-.product_decor {
-  z-index: -1;
-  position: relative;
-  width: 82px;
-  height: 62px;
- 
-}
 
 
 .archive-image{
@@ -328,18 +321,7 @@ li {
 
 
 
-.star_2{
 
-  position: relative;
-  height: auto;
-  margin-bottom: 140px;
-  width: 48px;
-  z-index: -1;
-  height: 44px;
-  width: auto;
-
-
-}
 
 
 
@@ -552,16 +534,30 @@ opacity: 0.6;
   float: left;
 } 
 
+.introcontainer{
+    background-repeat:no-repeat;
+    background-position:right; 
+ width: 100%;
+ height: 170px;
+  background-repeat:no-repeat;
+    background-position:left; 
+    text-align: center;  
 
+}
 
 .uplink{
   max-width: 50px;
   float: right;
   margin-top: 10px;
   margin-right: 10px;
+  z-index: 2;
 
 }
 
+
+#gallerycontainer_2{
+  text-align: center;
+}
 
 
 .linkabout{
@@ -676,11 +672,9 @@ opacity: 0.6;
 
 .landing {
   padding-top: 120px;
-  z-index: 0;
   }
 
 .project_landing {
-  z-index: 0;
   padding-top: 4vw;
   }
 
@@ -690,7 +684,6 @@ opacity: 0.6;
 
 
 .landing_1 {
-  z-index: 0;
     padding-top: 72px;
 
 
@@ -1319,16 +1312,7 @@ margin-top: 10px;
 }
 
 
-.star{
-  z-index: 1;
-  width: 48px;
-  height: 48px;
-  transition: all.7s;
-  position: relative;
-  margin-top: 30px;
 
-  
-}
 
 .about_link{
   font-weight: 600;
@@ -1338,24 +1322,7 @@ margin-top: 10px;
 
 
 
-.location{
-  width: auto;
- height: 20px;
-  float: left;
-  z-index: 3;
- 
-}
 
-
-
-
-.star_1{
-  z-index: 1;
-  width: 90px;
-  height: 90px;
-  transition: all.7s;
-  position: relative;
-}
 
 
 
@@ -1583,16 +1550,6 @@ margin-top: 10px;
 
 
 
-.text-menu_work{
-  position: fixed;
-   color: #1a1b1f;
-  z-index: 1;
-  width: 100%;
-  padding-right: 80px;
-  padding-left: 10%;
-  opacity: 80%;
-  height: 120px;
-}
 
 
 
